--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "qunit": "^2.18.0",
     "qunit-dom": "^2.0.0",
     "tailwindcss": "^3.1.8",
+    "tracked-built-ins": "^3.1.0",
     "webpack": "^5.70.0"
   },
   "engines": {
